# 2025-p1-saakshigupta2002

./: Dockerfile  README.md  local.sh  pyproject.toml  requirements.txt
app/: database.py  main.py
app/api/: analysis.py  health.py  labs.py  patients.py
app/models/: analysis.py  lab.py
app/services/: analysis.py
app/utils/: labs.py  validation.py
